# csvcalc

./: .gitignore  CMakeLists.txt  csvcalc.sln
csvcalc/: csvcalc.cpp  csvcalc.h  csvcalc.vcxproj  csvcalc.vcxproj.filters  csvparser.cpp
include/: csvcalc.h
src/: csvcalc.cpp  csvparser.cpp  testcsv.cpp
test/answer/: g0_basic_01.csv  g0_basic_02.csv  g0_basic_03.csv  g0_basic_04.csv  g1_basic_01.csv  g1_basic_02.csv  g1_const_01.csv  g1_const_02.csv  g2_chaining_01.csv  g2_chaining_02.csv  g2_chaining_03.csv  g2_const_01.csv  g2_const_02.csv  g3_chaining_01.csv  g3_chaining_02.csv  g3_chaining_04.csv  g3_expr_01.csv  g3_expr_02.csv  g3_expr_03.csv  g3_expr_04.csv  g3_expr_05.csv  g3_expr_06.csv  g3_expr_07.csv  g3_expr_08.csv  g3_expr_10.csv  g3_expr_literals_01.csv  g3_expr_literals_02.csv  g3_spacing_02.csv
test/unix/: test_g0_basic_02.csv  test_g0_basic_03.csv  test_g0_basic_04.csv  test_g0_syntax_01.csv  test_g0_wrong_cell_address_01.csv  test_g0_wrong_cell_address_02.csv  test_g0_wrong_op_01.csv  test_g0_wrong_op_02.csv  test_g1_basic_01.csv  test_g1_basic_02.csv  test_g1_const_01.csv  test_g1_const_02.csv  test_g2_chaining_03.csv  test_g2_const_01.csv  test_g2_const_02.csv  test_g2_div_by_zero_01.csv  test_g2_div_by_zero_02.csv  test_g2_loop_01.csv  test_g2_loop_02.csv  test_g2_syntax_01.csv  test_g2_syntax_02.csv  test_g2_syntax_03.csv  test_g2_syntax_04.csv  test_g2_syntax_05.csv  test_g2_syntax_06.csv  test_g2_syntax_07.csv  test_g2_syntax_08.csv  test_g2_syntax_09.csv  (+22 more)
tests/: test_bad_expr_01.csv  test_exprs_prio_01.csv  test_loop_01.csv
(+71 files in other folders)
